# analysis_snp

./: CMakeLists.txt  README.md  rna.ps  sequence.txt
cpp_part/inc/: all_amino_acids.h  energy.h
cpp_part/src/: energy.cpp  reading_conf.cpp
data/S609367_results/: Bsites.clr  Bsites.inf  cscore.txt  index.html  lscore.html  lscore.txt  prob.txt
files/: mutation_subsequences.txt
inc/: check_input.h  energy.h  plot.h  reading_conf.h  sequence_processing.h
proteins_alignment_part/: main.py
proteins_alignment_part/data/: S610689_results.tar.bz2
proteins_alignment_part/results/alignment_information/: alignment_results.txt
proteins_alignment_part/src/: data_processing.py
python_part/: main.py
python_part/data/: S609367_results.tar.bz2  S609608_results.tar.bz2  S611234_results.tar.bz2
python_part/data/S610689_results/: Bsites.clr  Bsites.inf  cscore.txt  index.html  lscore.html  lscore.txt  prob.txt
python_part/data/S611234_results/: Bsites.clr  Bsites.inf  cscore.txt  index.html  lscore.html  lscore.txt  prob.txt
python_part/env/: pyvenv.cfg
python_part/src/: data_processing.py  main.py  test.py
rna_part/inc/: sequence_processing.h
rna_part/src/: sequence_processing.cpp
src/: energy.cpp  main.cpp  plot.cpp  reading_conf.cpp  sequence_processing.cpp
